[package]
name = "csaf-rs"
description = "A parser for the CSAF standard written in Rust"
license = "Apache-2.0"
repository = "https://github.com/csaf-rs/csaf"
keywords = ["csaf"]
readme = "../README.md"
version = "0.3.1"
edition = "2024"
rust-version = "1.85.1"

[lib]
name = "csaf"
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:tsify", "dep:console_error_panic_hook"]

[dependencies]
regress = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
rust-embed = { version = "8", features = ["include-exclude"] }
packageurl = "0.6.0-rc.1"
uuid = { version = "1.17.0", features = ["v7", "serde"] }
tsify = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
semver = { version = "1" }
jsonschema = { version = "0.37.4", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.17.0", features = ["v7", "serde", "js"] }

[build-dependencies]
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typify = "0.4"
glob = "0.3"
syn = "2"
prettyplease = "0.2"
thiserror = "2"
json_dotpath = "1"
quote = "1"
proc-macro2 = "1"
